<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundScreen"
        android:padding="16dp">

        <com.leandroid.formula1.widget.CommomButton
            android:id="@+id/btn_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:commom_button_description="@string/title_about_more_commom_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.leandroid.formula1.widget.CommomButton
            android:id="@+id/btn_term_of_use"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:commom_button_description="@string/title_term_of_use_more_commom_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_about" />

        <com.leandroid.formula1.widget.CommomButton
            android:id="@+id/btn_policy_privacidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:commom_button_description="@string/title_policy_privacidad_commom_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_term_of_use" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>